--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Resume</title>
 </head>
 <body>
+    
+    <h1 align="center">My Resume</h1>
+    <img src="picttt.png" alt="Profile Picture" width="200" height="200" align="right">
+    <p>
+        Name: Ayush<br>
+        Class: 10<br>
+        School: GD Public School<br>
+        Hobbies: Reading, Coding, Traveling<br>
+        Skills: HTML, CSS, JavaScript<br>
+        Contact: work@ayushhardeniya.site <br>
+        Address: 123 Main St, City, Country
+    </p>
     <center>
-    <h1>Academic Qualification</h1>
     <table border="1">
         <tr>
             <th>Class</td>
