Date - 03/09/2025, WD Lab

--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume</title>
+    <link rel="icon" href="profile-placeholder.png" type="image/x-icon">
 </head>
+
 <body>
-    <center>
-        <h1>RESUME</h1>
-        <bdi
-    </center>
+
+    <table border="1" width="80%" align="center" cellpadding="10">
+        <tr>
+            <td>
+                <table border="1" align="right" width="150px" height="180px">
+                    <tr>
+                        <td align="center">
+                            <img src="profile-placeholder.png" alt="Photo" width="150px" height="180px">
+                        </td>
+                    </tr>
+                </table>
+
+                <!--<marquee behavior="scroll" direction="right"><h1 align="center"><u>Resume</u></h1></marquee> #for scrolling effect-->
+                <h1 align="center"><u>Resume</u></h1>
+
+                <p><b>Name:</b> Ayush Sharma</p>
+                <p><b>Father's Name:</b> H.D Sharma</p>
+                <p><b>Mother's Name:</b> Kusum Devi</p>
+                <p><b>DOB:</b> 08/07/2006</p>
+                <p><b>Email:</b> <a href="mailto:connect@ayushhardeniya.site">connect@ayushhardeniya.site</a></p>
+                <p><b>GitHub ID:</b> 
+                    <a href="https://github.com/ayushhardeniya">ayushHardeniya</a>
+                </p>
+                <p><b>Mobile No.:</b> 95483xxxx8</p>
+
+                <h2>Academic Qualification</h2>
+                <table border="1" width="100%" cellpadding="8" cellspacing="0">
+                    <tr bgcolor="lightblue">
+                        <th>S. No.</th>
+                        <th>Class</th>
+                        <th>Board</th>
+                        <th>Marks</th>
+                        <th>Division</th>
+                    </tr>
+                    <tr>
+                        <td align="center">1</td>
+                        <td align="center">10th</td>
+                        <td align="center">CBSE</td>
+                        <td align="center">96.4%</td>
+                        <td align="center">First</td>
+                    </tr>
+                    <tr>
+                        <td align="center">2</td>
+                        <td align="center">12th</td>
+                        <td align="center">CBSE</td>
+                        <td align="center">78%</td>
+                        <td align="center">First</td>
+                    </tr>
+                    <tr>
+                        <td align="center">3</td>
+                        <td align="center">BTech</td>
+                        <td align="center">AKTU</td>
+                        <td align="center">85%</td>
+                        <td align="center">First</td>
+                    </tr>
+                </table>
+
+                <h2>Area of Interest</h2>
+                <ul>
+                    <li>Web Development</li>
+                    <li>Data Structures & Algorithms</li>
+                    <li>Problem Solving</li>
+                </ul>
+
+                <h2>Hobbies & Interests</h2>
+                <ul>
+                    <li>Listening Music</li>
+                    <li>Reading Non-fictional Books</li>
+                    <li>Travelling</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+    
+
 </body>
 </html>
